--- a/04-04-2022.md
+++ b/04-04-2022.md
@@ -1,1 +1,3 @@
-#Another April Cycle
+Another Aprii Cycle is coming. A low pressure system is pushing down into Utah There isn't much water in the system, but modles are showing a bit more water coming into the equation. Right now it is looking a little bit more optimistic for higher snow totals. 
+![low pressure](images/gfs-ens_z500aNorm_wus_fh102-204.gif) ![low water](iimages/gfs-ens_mslp_pwata_wus_fh102-192.gif) 
+![potential water](images/ecmwf_mslp_pwata_wus_50.png) 
